# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.  
#
# Fichier ChangeLog
# 2011-02-28  Nicolas Hernandez  <nicolas.hernandez@gmail.com>


2011-04-29  Nicolas Hernandez  <nicolas.hernandez@gmail.com> not tagged
  * uima-common: répercussions de refactoring en ajoutant dans le même package JCasSofaView, Annotation, AnnotationCollection, Feature et DocumentAnnotation Utilities, et en renommant nombreuses méthodes afin de les rendre plus explicites sur leur rôles
  
2011-03-13 Nicolas Hernandez  <nicolas.hernandez@gmail.com> non inclu dans le jar en ligne
  * Mise à jour de certains fichiers après clean et régénération du bin
  * README: quelques conseils pour la régénération pour éviter des problèmes de compilation

  
2011-02-28 Nicolas Hernandez  <nicolas.hernandez@gmail.com>
  * Ajout des fichiers  ChangeLog, CREDITS, KNOWN_BUGS, LICENSE, TODO et mise à jour du README
  * Ajour des headers licences aux fichiers src
  * Refactoring des noms des fichiers desc avec les suffixes AE, TS et AAE 
  * C99Final en C99 aussi, et C99WithSentenceWSTSnowball en C99, voir aussi les classes des src notamment ParserSentenceWSTSnowBallC99 en ParserC99
  * C99AE: paramétrage des types sentenceAnnotation et tokenAnnotation de C99 (suppression des AE et des types Paragraph et Sentence Segmenter)
  * ParserSentenceWSTSnowBallC99: paramétrage pour que l'on puisse spécifier le token feature sur lequel travailler (stem ou coveredText ou autre)
  * Définition du TS par défaut, SegmentAnnotation, au sein du desc C99AE à la place de celui en dur type fr.univnantes.lina.uima.jc99.ThemeSegment
  * Utilisation de uima-common pour faire étendre l'AE de AnnotatorEngine, permet de récupérer les inputView et outputAnnotation 