@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <jardesc>
-    <jar path="uima-text-segmenter/target/uima-text-segmenter-v110311.jar"/>
+    <jar path="uima-text-segmenter/target/uima-text-segmenter-v110519.jar"/>
     <options buildIfNeeded="true" compress="true" descriptionLocation="/uima-text-segmenter/packaging-uima-text-segmenter.jardesc" exportErrors="true" exportWarnings="true" includeDirectoryEntries="true" overwrite="true" saveDescription="true" storeRefactorings="false" useSourceFolders="false"/>
     <storedRefactorings deprecationInfo="true" structuralOnly="false"/>
     <selectedProjects/>
