@@ -40,7 +40,7 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 
 import fr.univnantes.lina.uima.textSegmenter.UIMARawText;
-import fr.univnantes.lina.uima.util.UIMAUtilities;
+import fr.univnantes.lina.uima.util.UIMAUtils;
 
 import uk.ac.man.cs.choif.extend.structure.ContextVector;
 import uk.ac.man.cs.choif.nlp.surface.Punctuation;
